Final after review

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,7 +19,7 @@
         <main>
             <section>
                 <form id="form">
-                    <input id="text" type="text" name="name" value="" minlength="3" placeholder="Enter your text.">
+                    <input id="text" type="text" name="name" value="" placeholder="Enter your text.">
                     <button id="generate" type="submit" name="" value="submit">Submit</button>
                  </form>
             </section>
