--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -3,6 +3,8 @@ footer{
     background-color:#2e2a2a;
     color: white;
     width: 100%;
-    padding: .2em 2em;
-    bottom: 0%;
+    bottom: 0;
+    margin-top: auto;
+    height: 20px;
+    //position: fixed;
 }
